# Bird-Code

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: visualize_session.py
src/birdcode/: __init__.py  blocks.py  conversation.py
tests/: test_agent_loop.py  test_agent_loop_context.py  test_agent_worktree_e2e.py  test_agents_command.py  test_anthropic_provider.py  test_app.py  test_app_permission.py  test_app_thinking.py  test_at_completion.py  test_base_llm.py  test_bash_tool.py  test_blacklist.py  test_blocks.py  test_cache_hit.py  test_capability_registry.py  test_cli.py  test_cli_app.py  test_cli_worktree.py  test_command_builtins.py  test_command_parse.py  test_command_registry.py  test_completion.py  test_config_context.py  test_config_loader.py  test_config_schema.py  test_context_manager.py  test_context_overflow_detection.py  test_context_usage.py  test_controller_context.py  test_delete_tool.py  test_edit_diff_event.py  test_edit_diff_ui.py  test_edit_tool.py  test_executor.py  test_factory.py  test_gate_exempt.py  test_glob_tool.py  test_grep_tool.py  test_icons.py  test_input_area.py  (+54 more)
tests/agent/: __init__.py  test_esc_interrupt_msg.py  test_system_override.py
tests/agents/: __init__.py  test_builtins.py  test_definition.py  test_discover.py  test_discover_lost.py  test_loader.py  test_manager.py  test_manager_has_live.py  test_phase1_e2e.py  test_phase2_e2e.py  test_registry.py  test_report.py  test_report_artifacts.py  test_resume_corrupt_meta.py  test_resume_crosscheck_completed.py  test_resume_empty_sidechain.py  test_resume_idempotency.py  (+10 more)
(+162 files in other folders)
