[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "birdcode"
version = "0.1.0"
description = "Terminal AI coding agent"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7",
    "pydantic>=2.6",
    "typer>=0.12.3",
    "textual>=8.2",
    "anthropic>=0.113.0",
    "openai>=2.44.0",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.22",
    "mcp>=1.0",
]

[project.scripts]
birdcode = "birdcode.cli.app:run"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260518",
]
